Fix wrap issue for V's name

--- a/css/space-odyssey.css
+++ b/css/space-odyssey.css
@@ -18,7 +18,7 @@ body {
     border: 1px solid rgba(215, 227, 255, 0.04);
     border-radius: 4px;
     background: rgba(53, 66, 162, 0.07) none repeat scroll 0% 0%;
-    width: 254px;
+    width: 250px;
     margin: 15px 0px;
     padding: 1px 0px 20px 13px;
 }
